--- a/src/index.css
+++ b/src/index.css
@@ -168,3 +168,62 @@ body {
 .botonPagination:active {
   animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
 }
+
+.titulo {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: #2563EB;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.2);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+.botonImg {
+  transition-property: all;
+  transition-duration: 300ms;
+  transition-timing-function: ease-in-out;
+  transform: none;
+  color: #FFFFFF;
+  font-weight: bold;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  border-radius: 15px;
+}
+
+.botonImg:hover {
+  transform: scale(1.1);
+}
+
+.botonImg:hover,
+.botonImg:focus {
+  outline: none;
+}
+
+.botonImg:active {
+  animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+}
+
+.styled-hr {
+  border: none;
+  height: 2px;
+  background-color: #8b8b8b;
+  background-image: linear-gradient(to right, #8b8b8b, #dedede, #8b8b8b);
+  border-radius: 5px;
+}
