--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,10 @@ body {
   width: 80%;
 }
 
+.h-tabla {
+  height: 500px;
+}
+
 .boton {
   transition-property: all;
   transition-duration: 300ms;
